Fix misaligned line height

--- a/ckanext/ckanext-apicatalog_ui/less/module.less
+++ b/ckanext/ckanext-apicatalog_ui/less/module.less
@@ -234,7 +234,7 @@
   float: left;
   width: 50px;
   height: 50px;
-  line-height: 50px;
+  line-height: @line-height-computed;
   text-align: center;
   margin-right: 15px;
   img {
